welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:5: error: type mismatch;
 found   : Unit
 required: Boolean
    if(isMorning && isMom){
    ^